Cross-publish for different Spark versions